--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
   ],
   "rules": {
     "no-console": 1,
-    "prettier/prettier": 1
+    "prettier/prettier": 1,
+    "typescript-eslint/no-explicit-any": "off"
   }
 }
