--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,6 @@
   "rules": {
     "no-console": 1,
     "prettier/prettier": 1,
-    "typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
